--- a/CubeIconReverter.csproj
+++ b/CubeIconReverter.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Modules.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toggle.cs">
+    <Compile Include="Custom\Toggle.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
