--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,9 @@ jobs:
       
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
-      # Runs a single command using the runners shell
-      - name: build projectgo fi
-        run: msbuild cubeiconreverter.csproj -property:Configuration=Release
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: install dependencies
+        run: msbuild -t:restore
+        
+      - name: build project
+        run: msbuild cubeiconreverter.csproj -property:Configuration=Release
