--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,6 @@ jobs:
       
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
-
-      - name: install dependencies
-        run: msbuild -p:RestorePackagesConfig=true
         
       - name: build project
-        run: msbuild cubeiconreverter.csproj -property:Configuration=Release
+        run: msbuild cubeiconreverter.csproj -property:Configuration=Release -restore
