--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,11 @@ jobs:
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
         
+      - name: Setup NuGet.exe for use with actions
+        uses: NuGet/setup-nuget@v1.0.5
+  
+      - name: get dependencies
+        run: nuget restore
+        
       - name: build project
         run: msbuild cubeiconreverter.csproj -property:Configuration=Release -restore
